# nvidia-resiliency-ext

./: .gitignore  CLAUDE.md  README.md  build.py
.github/workflows/: unit_test.yml
checkpointing/async/api/: filesystem_async.html  state_dict_saver.html
checkpointing/local/api/: base_state_dict.html  replication.html
docs/: decentralized_global_iteration_diagram.md  global_iteration_design.md
docs/source/: index.rst
docs/source/fault_tolerance/: usage_guide.rst
docs/source/fault_tolerance/integration/: inprocess.rst
examples/fault_tolerance/: tcpstore_inspect.py
inprocess/: usage_guide.html
minimal/: README.md  pyproject.toml
scripts/: build_both_wheels.sh  build_minimal_wheel.sh
services/scripts/: common.sh
src/nvidia_resiliency_ext/: __init__.py  _optional_imports.py
src/nvidia_resiliency_ext/attribution/log_analyzer/: log_analyzer.py
src/nvidia_resiliency_ext/fault_tolerance/: _ft_rendezvous.py  config.py  error_classifier.py  launcher.py  per_cycle_logs.py
src/nvidia_resiliency_ext/inprocess/: state.py  store.py  tcpstore_service.py  utils.py  wrap.py
src/nvidia_resiliency_ext/shared_utils/: memory.py
tests/fault_tolerance/func/: run_launcher_any_failed_mode_test.sh  run_launcher_min_healthy_mode_test.sh
tests/fault_tolerance/unit/: test_dynamic_rendezvous.py
