# SPDX-FileCopyrightText: Copyright (c) 2024 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Minimal distribution: runtime protobuf, no grpcio. Wheel builds run protoc via grpcio-tools (see
# [build-system]); CUPTI/pybind11 skipped with STRAGGLER_DET_SKIP_CUPTI_EXT_BUILD=1 in build script.
# Poetry cannot package ../src from this directory — use scripts/build_minimal_wheel.sh from repo root.

[tool.poetry]
name = "nvidia-resiliency-ext-minimal"
repository = "https://github.com/NVIDIA/nvidia-resiliency-ext"
version = "0.0.0"
description = "NVIDIA Resiliency Extension (minimal dependencies only)"
authors = ["NVIDIA Corporation"]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
packages = [{ include = "nvidia_resiliency_ext", from = "src" }]

exclude = ["src/nvidia_resiliency_ext/attribution/straggler/cupti_src"]

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning[backend]>=1.0.0",
    # grpcio-tools<1.61 uses pkg_resources; setuptools>=82 removed it.
    "setuptools>=61.0,<82",
    "wheel",
    # gRPC Python 1.61+ is 2024; cap so builds use the 1.48–1.60 protoc line.
    "grpcio-tools>=1.48.0,<1.61.0",
]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.dependencies]
torch = ">=2.3.0"
packaging = "*"
python = ">=3.10"
psutil = ">=6.0.0"
pyyaml = "*"
nvidia-ml-py = ">=12.570.86"
defusedxml = "*"
# Match stubs produced by grpcio-tools<1.61 (embedded protoc); not the same floor as the full package.
protobuf = ">=4.21.6,<6"
setproctitle = ">=1.3.0"

[tool.poetry.scripts]
ft_launcher = "nvidia_resiliency_ext.fault_tolerance.launcher:main"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^v?(?P<base>\\d+\\.\\d+\\.\\d+)(?:-main)?$"
format-jinja = """
{%- if distance == 0 -%}
{{ base }}
{%- else -%}
{{ base }}.dev{{ distance }}+{{ commit }}
{%- endif -%}
"""
